--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -426,6 +426,7 @@ blockchain==1.4.4
 
 # homeassistant.components.decora
 # homeassistant.components.miflora
+# homeassistant.components.volcano
 # bluepy==1.3.0
 
 # homeassistant.components.bme280
