--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -287,6 +287,11 @@ blebox_uniapi==1.3.3
 # homeassistant.components.blink
 blinkpy==0.18.0
 
+# homeassistant.components.decora
+# homeassistant.components.miflora
+# homeassistant.components.volcano
+# bluepy==1.3.0
+
 # homeassistant.components.bond
 bond-api==0.1.16
 
